force-app/main/default/objects/Committee__c/Committee__c.object-meta.xml
<CustomObject>
    <label>Committee</label>
    <nameField>
        <label>Committee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Committees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>