force-app/main/default/objects/Committee__c/fields/Chair__c.field-meta.xml
<CustomField>
    <fullName>Chair__c</fullName>
    <label>Chair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>