force-app/main/default/objects/Committee__c/fields/Democrat_Members__c.field-meta.xml
<CustomField>
    <fullName>Democrat_Members__c</fullName>
    <label>Democrat Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>