force-app/main/default/objects/Committee__c/fields/Female_Members__c.field-meta.xml
<CustomField>
    <fullName>Female_Members__c</fullName>
    <label>Female Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>