force-app/main/default/objects/Committee__c/fields/Male_Members__c.field-meta.xml
<CustomField>
    <fullName>Male_Members__c</fullName>
    <label>Male Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>