force-app/main/default/objects/Committee__c/fields/Minority_Website__c.field-meta.xml
<CustomField>
    <fullName>Minority_Website__c</fullName>
    <label>Minority Website</label>
    <type>Url</type>
</CustomField>