force-app/main/default/objects/Committee__c/fields/Parent_Committee__c.field-meta.xml
<CustomField>
    <fullName>Parent_Committee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Committee</label>
    <referenceTo>Committee__c</referenceTo>
    <relationshipLabel>Sub-Committees</relationshipLabel>
    <relationshipName>Committees</relationshipName>
    <type>Lookup</type>
</CustomField>